Done with refactoring post method; refs #126925